# pico-rfid

./: CMakeLists.txt  README.md  build.sh  main.c  main.cpp
